Prevents links to overflow container when they are too long (DT-1355)

--- a/defaults/widgets/twitter.less
+++ b/defaults/widgets/twitter.less
@@ -14,6 +14,14 @@
                 .clearfix;
                 a {
                     text-decoration: none;
+                    // Allows text wrap for long words without spacing
+                    -ms-word-break: break-all;
+                    word-break: break-all;
+                    word-break: break-word;
+                    -webkit-hyphens: auto;
+                    -moz-hyphens: auto;
+                    hyphens: auto;
+
                     &:hover {
                         text-decoration: underline;
                     }
